--- a/portfolio.html
+++ b/portfolio.html
@@ -30,7 +30,7 @@
 		  	<table style="max-width: 900px; background-color: #000000; margin-left: auto; margin-right: auto; width: 100%;">
 				  	<tr>
 						<td>
-							<img alt="Carousel Bootstrap Second" src="images/2022-Address-Header-Black.jpg" class="headermred" style="display: block; margin-left: auto; margin-right: auto; width: 100%;">
+							<img alt="Carousel Bootstrap Second" src="images/2022-Address-Header-White.jpg" class="headermred" style="display: block; margin-left: auto; margin-right: auto; width: 100%;">
 						</td>
 					</tr>
 			</table> 
@@ -164,8 +164,7 @@
 <div>
 	<table align="center" style="margin:auto;" height="100px">
 	<tr align="center" padding-bottom="150px;">
-		<td style="text-align: center; width: 500px;"><a href="https://edwinau.github.io/edwin-landing/portfolio.html" ><p style="color:blue; font-size: 17px; font-family: 'Lato', sans-serif; ">&#62;
- UX UI Portfolio</p></a>
+		<td style="text-align: center; width: 500px;"><a href="https://edwinau.github.io/edwin-landing/portfolio-coding.html" ><p style="color:blue; font-size: 17px; font-family: 'Lato', sans-serif; ">&#62; Coding &#40;Html &amp; CSS&#41; Portfolio</p></a>
 		</td>
 		<td style="text-align: center; width: 500px;"><a href="https://edwinau.github.io/edwin-landing/portfolio-motion-social.html" ><p style="color:blue; font-size: 17px; font-family: 'Lato', sans-serif; ">&#62; Motion Graphics and Social Video Portfolio</p></a>
 		</td>
