--- a/portfolio-coding.html
+++ b/portfolio-coding.html
@@ -44,18 +44,18 @@
 			  </ol>
 			<div class="carousel-inner">
 				<div class="item active">
-						<a href="https://www.blacksheepshop.net/blg" target="_blank" style="text-decoration: none; color: black;"><p style="font-size:15px; font-weight: normal; text-align: right; font-family: 'Lato', sans-serif; padding: 40px 170px 25px;"><b>I use layout and appropriate CTA's to enhance design and engagement | Blakes for Margaret Atwood, event eVite - 2019</b></p>
+						<a href="https://www.blacksheepshop.net/blg" target="_blank" style="text-decoration: none; color: black;"><p style="font-size:15px; font-weight: normal; text-align: right; font-family: 'Lato', sans-serif; padding: 40px 170px 25px;"><b>I use layout and strategic CTA's to enhance usability and engagement | Blakes for Margaret Atwood, event eVite - 2019</b></p>
 				  <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-1.jpg" class="portfolio_images_76w"></a>
 				</div>  
 
 				<div class="item">
-				<a href="" target="_blank" style="text-decoration: none; color: black;"><p style="font-size:15px; font-weight: normal; text-align: right; font-family: 'Lato', sans-serif; padding: 40px 170px 25px;"><b>My favourite Blakes HTML &amp; CSS projects | Blakes for Shania Twain in Concert, event eVite - 2018</b></p>
-				  <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-2.jpg" class="portfolio_images"></a>
+				<a href="" target="_blank" style="text-decoration: none; color: black;"><p style="font-size:15px; font-weight: normal; text-align: right; font-family: 'Lato', sans-serif; padding: 40px 170px 25px;"><b>My favourite HTML &amp; CSS project at Blakes | Blakes for Shania Twain in Concert, event eVite - 2018</b></p>
+				  <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-2.jpg" class="portfolio_images_76w"></a>
 				</div>  
 
 				<div class="item">
 					<p style="font-size:15px; font-weight: normal; text-align: right; font-family: 'Lato', sans-serif; padding: 40px 170px 25px;"><b>I believe digital products are direct extensions of surface design | Blakes Madness XII, event eVite - 2018</b></p>
-						<img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-3.jpg" class="portfolio_images">
+						<img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-3.jpg" class="portfolio_images_76w">
 				</div>
 				
 
@@ -119,10 +119,9 @@
 <div>
 	<table align="center" style="margin:auto;" height="50px">
 	<tr align="center" padding-bottom="50px;">
-		<td style="text-align: center; width: 500px;"><a href="https://edwinau.github.io/edwin-landing/portfolio.html" ><p style="color:blue; font-size: 17px; font-family: 'Lato', sans-serif; ">&#62;
- UX UI Portfolio</p></a>
+		<td style="text-align: center; width: 500px;"><a href="https://edwinau.github.io/edwin-landing/portfolio.html" ><p style="color:blue; font-size: 17px; font-family: 'Lato', sans-serif; padding-top: 10px;">&#62; UX UI Portfolio</p></a>
 		</td>
-		<td style="text-align: center; width: 500px;"><a href="https://edwinau.github.io/edwin-landing/portfolio-motion-social.html" ><p style="color:blue; font-size: 17px; font-family: 'Lato', sans-serif; ">&#62; Motion Graphics and Social Video Portfolio</p></a>
+		<td style="text-align: center; width: 500px;"><a href="https://edwinau.github.io/edwin-landing/portfolio-motion-social.html" ><p style="color:blue; font-size: 17px; font-family: 'Lato', sans-serif; padding-top: 10px;">&#62; Motion Graphics and Social Video Portfolio</p></a>
 		</td>
 	</tr>
 	</table>
