--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
 <!-- <div style="background-image: url(images/wood.png); width: 100vw; height: 50vh", class="img_relative carouselgradient"> -->
 
-<div class="container_relative ipadcarou ipad displaynone" id="quoteelon">
+<div class="container_relative ipadcarou" id="quoteelon">
 
   <div style="background-color: #131313; width: 100vw; height: 100vh" class="container_one quote_container quotezero">
     <p class="sixtysix">&#8220;</p>
