--- a/portfolio-motion-social.html
+++ b/portfolio-motion-social.html
@@ -27,70 +27,32 @@
 <!-- <div class="carolcarolcon Desktop"> -->
 <div class="container_carousel" id="carousel">
 	
-		  	<table style="max-width: 900px; background-color: #000000; margin-left: auto; margin-right: auto; width: 100%;">
-				  	<tr>
-						<td>
-							<img alt="Carousel Bootstrap Second" src="images/2022-Address-Header-White.jpg" class="headermred" style="display: block; margin-left: auto; margin-right: auto; width: 100%;">
-						<p style="font-size:16px; font-weight: bold; text-align: right; font-family: 'Lato', sans-serif; padding: 40px 10px 25px; background-color: #fff;" >Motion graphics and social video examples | 2017 - present</p>
-					</td>
-				</tr>
-			</table> 
+	<table style="max-width: 900px; background-color: #000000; margin-left: auto; margin-right: auto; width: 100%;">
+			<tr>
+				<td>
+					<img alt="Carousel Bootstrap Second" src="images/2022-Address-Header-White.jpg" class="headermred" style="display: block; margin-left: auto; margin-right: auto; width: 100%;">
+				<p style="font-size:16px; font-weight: bold; text-align: right; font-family: 'Lato', sans-serif; padding: 40px 10px 25px; background-color: #fff;" >Motion graphics and social video examples | 2017 - present</p>
+			</td>
+		</tr>
+	</table> 
 	
-  <div class="container-fluid ninetywidth ipad displaynone">
-	  
-    <!-- <div class="row carousel"> -->
-	<div class="col-md-12 nopadding">  
-	<iframe src="images/Edwin_Au_Motion-Portfolio-2023.pdf#toolbar=0" width="100%" height="482px" wmode="transparent" marginwidth="0" marginheight="0" hspace="0" vspace="0" frameborder="0" scrolling="no" style="border:0;">
-    </iframe>
-	  </div>
-<!-- </div class="row carousel"> -->
-
-</div>
-	  
-	  
-<!-- <div class="carolcarolcon Mobile"> -->
-
-  <div class="container-fluid ninetywidth imac displaynone">
-
-    <!-- <div class="row carousel"> -->
-      <div class="col-md-12 nopadding">  
-		<div class="carousel slide" id="carousel-768363">
-			  <ol class="carousel-indicators">
-			  </ol>
-			<div class="carousel-inner">
-				<div class="item active">
-						<p style="font-size:12px; font-weight: bold; text-align: right; font-family: 'Lato', sans-serif; padding: 40px 170px 25px;"><b>I enjoy using Color and Typography to enhance Designs | Blakes for Margaret Atwood event eVite - 2019</b></p>
-				  <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-1.jpg" class="portfolio_images_76w">
-				</div>  
-
-				<div class="item">
-				<p style="font-size:12px; font-weight: bold; text-align: right; font-family: 'Lato', sans-serif; padding: 40px 170px 25px;"><b>One of my favourite Blakes HTML &amp; CSS projects - Shania Twain In Concert | Blakes for Shania Twain in Concert event eVite - 2018</b></p>
-				  <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-2.jpg" class="portfolio_images">
-				</div>  
-
-				<div class="item">
-					<p style="font-size:12px; font-weight: bold; text-align: right; font-family: 'Lato', sans-serif; padding: 40px 170px 25px;"><b>I believe digital products are direct extensions of poster / t-shirt / surface design | Blakes Madness event eVite and collaterals - 2018</b></p>
-						<img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-3.jpg" class="portfolio_images">
-				</div>
-				
-
-				<div> 
-					<a class="left carousel-control" href="#carousel-768363" data-slide="prev">
-					<span class="glyphicon glyphicon-chevron-left"></span></a>
-					 <a class="right carousel-control" href="#carousel-768363" data-slide="next">
-					<span class="glyphicon glyphicon-chevron-right"></span></a>
-				  </div>
-				</div>
-
-		<!-- </div class="row carousel"> -->
-			</div>
-	  </div>
+	<div class="container-fluid ninetywidth ipad displaynone">
+		<div class="col-md-12 nopadding">  
+			<iframe src="images/Edwin_Au_Motion-Portfolio-2023.pdf#toolbar=0" width="100%" height="482px" wmode="transparent" marginwidth="0" marginheight="0" hspace="0" vspace="0" frameborder="0" scrolling="no" style="border:0;">
+    		</iframe>
+	  	</div>
 	</div>
-		<!-- </div class="row carousel"> -->
+	<div class="container-fluid ninetywidth desktop displaynone">
+		<div class="col-md-12 nopadding">  
+			<iframe src="images/Edwin_Au_Motion-Portfolio-2023-mobile.pdf#toolbar=0" width="100%" height="482px" wmode="transparent" marginwidth="0" marginheight="0" hspace="0" vspace="0" frameborder="0" scrolling="no" style="border:0;">
+    		</iframe>
+	  	</div>
+	</div>
 </div>
-
-
 	
+	
+	
+
 <div>
 	<table align="center" style="margin:auto;" height="50px">
 	<tr align="center" padding-bottom="50px;">
