--- a/portfolio-motion-social.html
+++ b/portfolio-motion-social.html
@@ -42,9 +42,9 @@
     		</iframe>
 	  	</div>
 	</div>
-	<div class="container-fluid ninetywidth desktop displaynone">
+	<div class="container-fluid ninetywidth imac displaynone">
 		<div class="col-md-12 nopadding">  
-			<iframe src="images/Edwin_Au_Motion-Portfolio-2023-mobile.pdf#toolbar=0" width="100%" height="482px" wmode="transparent" marginwidth="0" marginheight="0" hspace="0" vspace="0" frameborder="0" scrolling="no" style="border:0;">
+			<iframe src="images/Edwin_Au_Motion-Portfolio-2023-motion.pdf#toolbar=0" width="100%" height="942px" wmode="transparent" marginwidth="0" marginheight="0" hspace="0" vspace="0" frameborder="0" scrolling="no" style="border:0;">
     		</iframe>
 	  	</div>
 	</div>
