--- a/portfolio.html
+++ b/portfolio.html
@@ -213,14 +213,12 @@
 
             </div> 
 
-		<!-- </div class="row carousel"> -->
 			</div>
 	  </div>
 	</div>
-		<!-- </div class="row carousel"> -->
 			</div>
 
-
+	</div>
 	
 <div>
 	<table align="center" style="margin:auto;" height="50px" index="1000">
@@ -264,8 +262,6 @@
 
 
 	 <div class="totop"><a href="index.html" target="" title="top"><i class="fa fa-angle-double-left" ></i>&nbsp;&nbsp;home</a></div>
-
-
 
 </body>
 
