--- a/portfolio-coding.html
+++ b/portfolio-coding.html
@@ -139,7 +139,7 @@
   background: -moz-linear-gradient(white, #ffb288, #f1b351); /* For Firefox 3.6 to 15 */
   background: linear-gradient(white, #ffb288, #f1b351); /* Standard syntax */
   width: 100vw; height: 16vh" >
- <!-- <img src="images/city_contact.png" class="img_contact" id="contactme" alt="city"> -->
+<img src="images/city_contact.png" class="img_contact" id="contactme" alt="city">
   <!-- <body background="images/marbleBlack.jpg" class="img_img"> -->
 <div class="container_two contact">
       <div class="container_contacts">
