--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             </div>
 
             <div class="col-md-12" id="labtopresumewidth">
-              <a href="EDWIN AU.pdf" target="_blank"><img src="images/EDWIN AU.jpg" alt="resume" title="Download PDF" class="resume_pdf"></a>
+              <a href="EDWIN AU.pdf" target="_blank"><img src="EDWIN AU.jpg" alt="resume" title="Download PDF" class="resume_pdf"></a>
             </div>
           </div>
         </div>
