--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
   background: -o-linear-gradient(to bottom, rgba(19,19,19,0), rgba(19,19,19,1)); /* For Opera 11.1 to 12.0 */
   background: -moz-linear-gradient(to bottom, rgba(19,19,19,0), rgba(19,19,19,1)); /* For Firefox 3.6 to 15 */
   background: linear-gradient(to bottom, rgba(19,19,19,0), rgba(19,19,19,1)); /* Standard syntax */ 
-				height=5vh; index:1000; bottom:0;  position: absolute; display: flex; height: 5vh; width: 100vw; z-index: 1000; bottom: 0;" >nbsp;
+				height=5vh; index:1000; bottom:0;  position: absolute; display: flex; height: 5vh; width: 100vw; z-index: 1000; bottom: 0;" >&nbsp;
 	</div>
 </div>
 
