--- a/portfolio-motion-social.html
+++ b/portfolio-motion-social.html
@@ -38,8 +38,9 @@
 	
 	<div class="container-fluid ninetywidth ipad displaynone">
 		<div class="col-md-12 nopadding">  
-			<iframe src="images/Edwin_Au_Motion-Portfolio-2023.pdf#toolbar=0" width="100%" height="482px" wmode="transparent" marginwidth="0" marginheight="0" hspace="0" vspace="0" frameborder="0" scrolling="no" style="border:0;">
-    		</iframe>
+			<a href="images/Edwin_Au_Motion-Portfolio-2023-motion.pdf"><iframe src="images/Edwin_Au_Motion-Portfolio-2023.pdf#toolbar=0" width="100%" height="482px" wmode="transparent" marginwidth="0" marginheight="0" hspace="0" vspace="0" frameborder="0" scrolling="no" style="border:0;">
+				</iframe>
+			</a>
 	  	</div>
 	</div>
 	<div class="container-fluid ninetywidth imac displaynone">
