got index need more

--- a/portfolio.html
+++ b/portfolio.html
@@ -59,7 +59,7 @@
 				</div>
 
 				 <div class="item">
-					<p style="font-size:16px; font-weight: bold; text-align: right; font-family: 'Lato', sans-serif; padding: 30px 170px 30px;"></p>Designer at Blake, Cassels &amp; Graydon LLP - Web, print and motion design, social media graphics |&nbsp;Aug 2017 - Jan 2020</p>
+					<p style="font-size:16px; font-weight: bold; text-align: right; font-family: 'Lato', sans-serif; padding: 30px 170px 30px;">Designer at Blake, Cassels &amp; Graydon LLP - Web, print and motion design, social media graphics |&nbsp;Aug 2017 - Jan 2020</p>
 				  <img alt="Carousel Bootstrap Third" src="images/blakes.jpg" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto;" >
 				</div>
 
