got index get ipad

--- a/index.html
+++ b/index.html
@@ -49,6 +49,13 @@
           <h2 class="right_right button-row"><a href="#contactme" title="CONTACT"></a></h2>
         </div>
       </div>
+	  <div style="background: red;
+  background: -webkit-linear-gradient(to bottom, rgba(21,21,21,0), rgba(21,21,21,1)); /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(to bottom, rgba(21,21,21,0), rgba(21,21,21,1)); /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(to bottom, rgba(21,21,21,0), rgba(21,21,21,1)); /* For Firefox 3.6 to 15 */
+  background: linear-gradient(to bottom, rgba(21,21,21,0), rgba(21,21,21,1)); /* Standard syntax */ 
+				height: 5vh; index:1000; bottom:0;  position: absolute; display: flex; height: 5vh; width: 100vw; z-index: 1000; bottom: 0;" >&nbsp;
+	  </div>
     </div>
 
 	    <!-- In a Nutsell -->
@@ -149,7 +156,7 @@
   background: -o-linear-gradient(to bottom, rgba(19,19,19,0), rgba(19,19,19,1)); /* For Opera 11.1 to 12.0 */
   background: -moz-linear-gradient(to bottom, rgba(19,19,19,0), rgba(19,19,19,1)); /* For Firefox 3.6 to 15 */
   background: linear-gradient(to bottom, rgba(19,19,19,0), rgba(19,19,19,1)); /* Standard syntax */ 
-				height=5vh; index:1000; bottom:0;  position: absolute; display: flex; height: 5vh; width: 100vw; z-index: 1000; bottom: 0;" >&nbsp;
+				height:5vh; index:1000; bottom:0;  position: absolute; display: flex; height: 5vh; width: 100vw; z-index: 1000; bottom: 0;" >&nbsp;
 	</div>
 </div>
 
