remove coding anchors

--- a/portfolio-coding.html
+++ b/portfolio-coding.html
@@ -44,17 +44,17 @@
 			  </ol>
 			<div class="carousel-inner">
 				<div class="item active">
-						<a href="https://www.blacksheepshop.net/blg" target="_blank" style="text-decoration: none; color: black;"><p style="font-size:15px; font-weight: normal; text-align: right; font-family: 'Lato', sans-serif; padding: 40px 170px 25px;"><b>I use layout and strategic CTA's to enhance usability and engagement | Blakes for Margaret Atwood, event eVite - 2019</b></p>
-				  <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-1.jpg" class="portfolio_images_76w"></a>
+						<p style="font-size:15px; font-weight: bold; text-align: right; font-family: 'Lato', sans-serif; padding: 40px 170px 25px;">I use layout and strategic CTA's to enhance usability and engagement | Blakes for Margaret Atwood, event eVite - 2019</p>
+				  <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-1.jpg" class="portfolio_images_76w">
 				</div>  
 
 				<div class="item">
-				<a href="" target="_blank" style="text-decoration: none; color: black;"><p style="font-size:15px; font-weight: normal; text-align: right; font-family: 'Lato', sans-serif; padding: 40px 170px 25px;"><b>My favourite HTML &amp; CSS project at Blakes | Blakes for Shania Twain in Concert, event eVite - 2018</b></p>
-				  <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-2.jpg" class="portfolio_images_76w"></a>
+				<p style="font-size:15px; font-weight: bold; text-align: right; font-family: 'Lato', sans-serif; padding: 40px 170px 25px;">My favourite HTML &amp; CSS project at Blakes | Blakes for Shania Twain in Concert, event eVite - 2018</p>
+				  <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-2.jpg" class="portfolio_images_76w">
 				</div>  
 
 				<div class="item">
-					<p style="font-size:15px; font-weight: normal; text-align: right; font-family: 'Lato', sans-serif; padding: 40px 170px 25px;"><b>I believe digital products are direct extensions of surface design | Blakes Madness XII, event eVite - 2018</b></p>
+					<p style="font-size:15px; font-weight: bold; text-align: right; font-family: 'Lato', sans-serif; padding: 40px 170px 25px;">I believe digital products are direct extensions of surface design | Blakes Madness XII, event eVite - 2018</p>
 						<img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-3.jpg" class="portfolio_images_76w">
 				</div>
 				
