--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
   <div style="background-color: #131313; width: 100vw; height: 100vh" class="container_one quote_container quotezero">
     <p class="sixtysix">&#8220;</p>
-    <div class="quote embossed container_two quotezero">Life is so short you can't waste even a day subscribing to what someone thinks you can do versus knowing what you&nbsp;can&nbsp;do.
+    <div class="quote embossed container_two quotezero">Life is so short you can't waste even a day subscribing to what someone thinks you can do versus knowing what you can do.
       <div class="elon_musk embossed container_two">- Virgil Abloh -</div>
     </div>
     <p class="ninetynine">&#8221;</p>
@@ -106,7 +106,7 @@
 
   <div style="background-color: #131313; width: 100vw; height: 100vh" class="container_one quote_container quotenone">
     <p class="sixtysix">&#8220;</p>
-    <div class="quote embossed container_two quotenone">Life is so short you can't waste even a day subscribing to what someone thinks you can do versus knowing what you&nbsp;can&nbsp;do.
+    <div class="quote embossed container_two quotenone">Life is so short you can't waste even a day subscribing to what someone thinks you can do versus knowing what you can do.
       <div class="elon_musk embossed container_two">- Virgil Abloh -</div>
     </div>
     <p class="ninetynine">&#8221;</p>
@@ -115,7 +115,7 @@
 
   <div style="background-color: #494E6B; width:100vw; height:100vh" class="container_one quote_container quoteone">
         <p class="sixtysix">&#8220;</p>
-    <div class="quote embossed container_two quoteone">Life is so short you can't waste even a day subscribing to what someone thinks you can do versus knowing what you&nbsp;can&nbsp;do.
+    <div class="quote embossed container_two quoteone">Life is so short you can't waste even a day subscribing to what someone thinks you can do versus knowing what you can do.
       <div class="elon_musk embossed container_two">- Virgil Abloh -</div>
     </div>
     <p class="ninetynine">&#8221;</p>
@@ -125,7 +125,7 @@
   <div style="background-color: #123d00; width: 100vw; height: 100vh" class="container_one quote_container quotetwo">
     <p class="sixtysix">&#8220;</p>
 
-    <div class="quote embossed container_two quotetwo">Life is so short you can't waste even a day subscribing to what someone thinks you can do versus knowing what you&nbsp;can&nbsp;do.
+    <div class="quote embossed container_two quotetwo">Life is so short you can't waste even a day subscribing to what someone thinks you can do versus knowing what you can do.
       <div class="elon_musk embossed container_two">- Virgil Abloh -</div>
     </div>
     <p class="ninetynine">&#8221;</p>
@@ -135,7 +135,7 @@
   <div style="background-color: #80BD9E;  width: 100vw; height: 100vh" class="container_one quote_container quotethree">
     <p class="sixtysix">&#8220;</p>
 
-    <div class="quote embossed container_two quotethree">Life is so short you can't waste even a day subscribing to what someone thinks you can do versus knowing what you&nbsp;can&nbsp;do.
+    <div class="quote embossed container_two quotethree">Life is so short you can't waste even a day subscribing to what someone thinks you can do versus knowing what you can do.
       <div class="elon_musk embossed container_two">- Virgil Abloh -</div>
     </div>
     <p class="ninetynine">&#8221;</p>
@@ -144,7 +144,7 @@
 
   <div style="background-color: #003B46; width: 100vw; height: 100vh" class="container_one quote_container quotefour">
     <p class="sixtysix">&#8220;</p>
-    <div class="quote embossed container_two quotefour">Life is so short you can't waste even a day subscribing to what someone thinks you can do versus knowing what you&nbsp;can&nbsp;do.
+    <div class="quote embossed container_two quotefour">Life is so short you can't waste even a day subscribing to what someone thinks you can do versus knowing what you can do.
       <div class="elon_musk embossed container_two">- Virgil Abloh -</div>
 
     </div>
