--- a/portfolio-coding.html
+++ b/portfolio-coding.html
@@ -122,7 +122,7 @@
 <div>
 	<table align="center" style="margin:auto;" height="50px">
 	<tr align="center" padding-bottom="50px;">
-		<td style="text-align: center; width: 500px;"><a href="https://edwinau.github.io/edwin-landing/portfolio.html" ><p style="color:blue; font-size: 17px; font-family: 'Lato', sans-serif; padding-top: 10px;">&#62; UX UI Portfolio</p></a>
+		<td style="text-align: center; width: 500px;"><a href="https://edwinau.github.io/edwin-landing/portfolio.html" ><p style="color:blue; font-size: 17px; font-family: 'Lato', sans-serif; padding-top: 10px;">&#62; UX UI &amp; Design Portfolio</p></a>
 		</td>
 		<td style="text-align: center; width: 500px;"><a href="https://edwinau.github.io/edwin-landing/portfolio-motion-social.html" ><p style="color:blue; font-size: 17px; font-family: 'Lato', sans-serif; padding-top: 10px;">&#62; Motion Graphics and Social Video Portfolio</p></a>
 		</td>
