--- a/portfolio-motion-social.html
+++ b/portfolio-motion-social.html
@@ -59,7 +59,7 @@
 	<table align="center" style="margin:auto;" height="50px">
 	<tr align="center" padding-bottom="50px;">
 		<td style="text-align: center; width: 500px;"><a href="https://edwinau.github.io/edwin-landing/portfolio.html" ><p style="color:blue; font-size: 17px; font-family: 'Lato', sans-serif; ">&#62;
- UX UI &amp; Design Portfolio</p></a>
+ UX UI and Product Design Portfolio</p></a>
 		</td>
 		<td style="text-align: center; width: 500px;"><a href="https://edwinau.github.io/edwin-landing/portfolio-coding.html" ><p style="color:blue; font-size: 17px; font-family: 'Lato', sans-serif; ">&#62; Coding &#40;Html &amp; CSS&#41; Portfolio</p></a>
 		</td>
