--- a/portfolio-coding.html
+++ b/portfolio-coding.html
@@ -44,7 +44,7 @@
 			  </ol>
 			<div class="carousel-inner">
 				<div class="item active">
-						<p style="font-size:15px; font-weight: bold; text-align: right; font-family: 'Lato', sans-serif; padding: 40px 170px 25px;">I use layout and strategic CTA's to enhance usability and engagement | Blakes for Margaret Atwood, event eVite - 2019</p>
+						<p style="font-size:15px; font-weight: bold; text-align: right; font-family: 'Lato', sans-serif; padding: 40px 170px 25px;">I use layout and CTA's strategically to enhance usability and engagement | Blakes for Margaret Atwood, event eVite - 2019</p>
 				  <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-1.jpg" class="portfolio_images_76w">
 				</div>  
 
@@ -84,7 +84,7 @@
 			  </ol>
 			<div class="carousel-inner">
 				<div class="item active">
-						<p style="font-size:12px; font-weight: bold; text-align: right; font-family: 'Lato', sans-serif; padding: 20px 30px 20px;">I use layout and strategic CTA's to enhance usability and engagement - Blakes for Margaret Atwood, event eVite |&nbsp;2019</p>
+						<p style="font-size:12px; font-weight: bold; text-align: right; font-family: 'Lato', sans-serif; padding: 20px 30px 20px;">I use layout and CTA's strategically to enhance usability and engagement - Blakes for Margaret Atwood, event eVite |&nbsp;2019</p>
 				  <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-1-mobile.jpg" class="portfolio_images-mobile">
 				</div>  
 
