pushing new assets

--- a/portfolio.html
+++ b/portfolio.html
@@ -84,8 +84,8 @@
 				  </div>
 
 				<div class="item">
-					<p style="font-size:16px; font-weight: bold; text-align: right; font-family: 'Lato', sans-serif; padding: 30px 170px 20px;">Intern at Dolce &amp; Gabbana. Milan, Italy - with direct European retail to consumer experience | Jan 2013 - Sep 2013</p>
-					<p style="font-size:14px; font-weight: normal; text-align: right; font-family: 'Lato', sans-serif; padding: 0px 170px;">Having accumulated 10 years of product development experience in Toronto - I took my technical design and fashion<br>design skills abroad, resulting in an opportunity to work at Dolce &amp; Gabbana’s Milan head quarters for just shy<br>of a year, assisting the D&amp;G design and sales team with their Fall 2013 and Spring 2014 collections.</p>
+					<p style="font-size:16px; font-weight: bold; text-align: right; font-family: 'Lato', sans-serif; padding: 30px 170px 20px;">Associate at Dolce &amp; Gabbana. Milan, Italy - with direct European retail to consumer experience | Jan 2013 - Sep 2013</p>
+					<p style="font-size:14px; font-weight: normal; text-align: right; font-family: 'Lato', sans-serif; padding: 0px 170px;">Having accumulated 10 years of product development experience in Toronto - I took my technical design and fashion<br>design skills abroad, resulting in an opportunity to work at Dolce &amp; Gabbana’s Milan head quarters for 9 months, assisting the design team with their Fall 2013 and Spring 2014 collections.</p>
 					<img alt="Carousel Bootstrap Third" src="images/DG2022.jpg" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto;" >
 				</div>
 
@@ -187,8 +187,8 @@
 			  						
             <div class="item">
 				
-<p style="font-size:11px; font-weight: bold; text-align: right; font-family: 'Lato', sans-serif; padding: 20px 30px 10px;"><b>Associate at Dolce &amp; Gabbana. Milan, Italy<br>with direct European retail to consumer experience | Jan - Sep 2013</b></p>
-<p style="font-size:9px; font-weight: normal; text-align: right; font-family: 'Lato', sans-serif; padding: 0px 30px;">Having accumulated 10 years of product development experience in Toronto - I took my Fashion design skills abroad resulting in an opportunity to work at Dolce &amp; Gabbana’s head quarters in Milan.</p>
+<p style="font-size:11px; font-weight: bold; text-align: right; font-family: 'Lato', sans-serif; padding: 20px 30px 10px;"><b>Associate at Dolce &amp; Gabbana. Milan, Italy | Jan - Sep 2013</b></p>
+<p style="font-size:9px; font-weight: normal; text-align: right; font-family: 'Lato', sans-serif; padding: 0px 30px;">Having accumulated 10 years of product development experience in Toronto - I took my fashion design skills abroad resulting in an opportunity to work at Dolce &amp; Gabbana’s head quarters in Milan.</p>
 		
               <img alt="Carousel Bootstrap Third" src="images/DG2022-mobile.jpg" class="portfolio_images-mobile" width="auto" height="75vh">
             </div>
