--- a/portfolio-coding.html
+++ b/portfolio-coding.html
@@ -13,7 +13,7 @@
     <link href="stylesheet/app.css" type="text/css" rel="stylesheet">
     <link href="stylesheet/carousel_portfolio-coding.css" type="text/css" rel="stylesheet">
     <link href="stylesheet/contact_portfolio-coding.css" type="text/css" rel="stylesheet">
-    <link href="stylesheet/media_labtop_portfolio-coding.css" type="text/css" rel="stylesheet">
+    <link href="stylesheet/media_labtop_portfolio-coding-html.css" type="text/css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.min.js"></script>
 
@@ -45,17 +45,17 @@
 			<div class="carousel-inner">
 				<div class="item active">
 						<p style="font-size:15px; font-weight: bold; text-align: right; font-family: 'Lato', sans-serif; padding: 40px 170px 25px;">I use layout and CTA's strategically to enhance usability and engagement | Blakes for Margaret Atwood, event eVite - 2019</p>
-				  <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-1.jpg" class="portfolio_images_76w">
+				  <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-1.jpg" class="portfolio_images">
 				</div>  
 
-				<div class="item">
+				<div class="item" >
 				<p style="font-size:15px; font-weight: bold; text-align: right; font-family: 'Lato', sans-serif; padding: 40px 170px 25px;">My favourite HTML &amp; CSS project at Blakes | Blakes for Shania Twain in Concert, event eVite - 2018</p>
-				  <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-2.jpg" class="portfolio_images_76w">
+				  <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-2.jpg" class="portfolio_images">
 				</div>  
 
 				<div class="item">
 					<p style="font-size:15px; font-weight: bold; text-align: right; font-family: 'Lato', sans-serif; padding: 40px 170px 25px;">I believe digital products are direct extensions of surface design | Blakes Madness XII, event eVite - 2018</p>
-						<img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-3.jpg" class="portfolio_images_76w">
+						<img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-3.jpg" class="portfolio_images">
 				</div>
 				
 
