--- a/portfolio-motion-social.html
+++ b/portfolio-motion-social.html
@@ -35,13 +35,14 @@
 			</td>
 		</tr>
 	</table> 
-	
+	<center>
 	<div class="container-fluid ninetywidth ipad displaynone">
 		<div class="col-md-12 nopadding">  
-			<iframe src="images/Edwin_Au_Motion-Portfolio-2023.pdf#toolbar=0" width="100%" height="482px" wmode="transparent" marginwidth="0" marginheight="0" hspace="0" vspace="0" frameborder="0" scrolling="no" style="border:0;">
+			<iframe src="images/Edwin_Au_Motion-Portfolio-2023.pdf#toolbar=0" width="800px" height="458px" wmode="transparent" marginwidth="0" marginheight="0" hspace="0" vspace="0" frameborder="0" scrolling="no" style="border:0;">
 			</iframe>
 	  	</div>
 	</div>
+	</center>
 	<div class="container-fluid ninetywidth imac displaynone">
 		<div class="col-md-12 nopadding">  
 			<a href="images/Edwin_Au_Motion-Portfolio-2023-motion.pdf">
@@ -56,16 +57,29 @@
 	
 
 <div>
-	<table align="center" style="margin:auto;" height="50px">
-	<tr align="center" padding-bottom="50px;">
-		<td style="text-align: center; width: 500px;"><a href="https://edwinau.github.io/edwin-landing/portfolio.html" ><p style="color:blue; font-size: 17px; font-family: 'Lato', sans-serif; ">&#62;
- UX UI and Product Design Portfolio</p></a>
+	<table align="left" style="margin:auto;" height="50px" index="1000" class="portfolio-nav">
+	
+	<tr align="left" padding-bottom="50px" margin-top="20px">
+		<td style="text-align: left; width: 350px;" ><p style="color:black; font-weight: bold; font-size: 22px; font-family: 'Lato', sans-serif; padding-top: 10px; text-decoration: none">Portfolios:</p>
 		</td>
-		<td style="text-align: center; width: 500px;"><a href="https://edwinau.github.io/edwin-landing/portfolio-coding.html" ><p style="color:blue; font-size: 17px; font-family: 'Lato', sans-serif; ">&#62; Coding &#40;Html &amp; CSS&#41; Portfolio</p></a>
+	</tr>
+		
+	<tr align="left" padding-bottom="50px" margin-top="20px">
+
+		<td style="text-align: left; width: 300px;" ><a href="https://edwinau.github.io/edwin-landing/portfolio.html" ><p style="color:blue; font-size: 14px; font-family: 'Lato', sans-serif; padding-top: 10px;">&bull; <u>UX UI and Product Design</u></p></a>
+		</td>
+	</tr>
+		
+		<tr align="center" padding-bottom="50px" margin-top="20px">
+		
+		<td style="text-align: left; width: 300px; "><a href="https://edwinau.github.io/edwin-landing/portfolio-coding.html" ><p style="color:blue; font-size: 14px; font-family: 'Lato', sans-serif; index:1000; padding-top: 10px;">&bull; <u>Coding &#40;Html &amp; CSS&#41;</u></p></a>
+		</td></tr>
+		
+		<tr><td style="text-align: left; width: 300px;"><a href="https://edwinau.github.io/edwin-landing/portfolio-motion-social.html" ><p style="color:green; font-size: 14px; font-family: 'Lato', sans-serif; padding-top: 10px;">&#62; <u>Motion Graphics and Social Videos</u></p></a>
 		</td>
 	</tr>
 	</table>
-</div>
+</div>	
 
     
 
