--- a/portfolio-coding.html
+++ b/portfolio-coding.html
@@ -120,15 +120,29 @@
 
 	
 <div>
-	<table align="center" style="margin:auto;" height="50px">
-	<tr align="center" padding-bottom="50px;">
-		<td style="text-align: center; width: 500px;"><a href="https://edwinau.github.io/edwin-landing/portfolio.html" ><p style="color:blue; font-size: 17px; font-family: 'Lato', sans-serif; padding-top: 10px;">&#62; UX UI and Product Design Portfolio</p></a>
+	<table align="left" style="margin:auto;" height="50px" index="1000" class="portfolio-nav">
+	
+	<tr align="left" padding-bottom="50px" margin-top="20px">
+		<td style="text-align: left; width: 350px;" ><p style="color:black; font-weight: bold; font-size: 22px; font-family: 'Lato', sans-serif; padding-top: 10px; text-decoration: none">Portfolios:</p>
 		</td>
-		<td style="text-align: center; width: 500px;"><a href="https://edwinau.github.io/edwin-landing/portfolio-motion-social.html" ><p style="color:blue; font-size: 17px; font-family: 'Lato', sans-serif; padding-top: 10px;">&#62; Motion Graphics and Social Video Portfolio</p></a>
+	</tr>
+		
+	<tr align="left" padding-bottom="50px" margin-top="20px">
+
+		<td style="text-align: left; width: 300px;" ><a href="https://edwinau.github.io/edwin-landing/portfolio.html" ><p style="color:blue; font-size: 14px; font-family: 'Lato', sans-serif; padding-top: 10px;">&bull; <u>UX UI and Product Design</u></p></a>
+		</td>
+	</tr>
+		
+		<tr align="center" padding-bottom="50px" margin-top="20px">
+		
+		<td style="text-align: left; width: 300px; "><a href="https://edwinau.github.io/edwin-landing/portfolio-coding.html" ><p style="color:green; font-size: 14px; font-family: 'Lato', sans-serif; index:1000; padding-top: 10px;">&#62; <u>Coding &#40;Html &amp; CSS&#41;</u></p></a>
+		</td></tr>
+		
+		<tr><td style="text-align: left; width: 300px;"><a href="https://edwinau.github.io/edwin-landing/portfolio-motion-social.html" ><p style="color:blue; font-size: 14px; font-family: 'Lato', sans-serif; padding-top: 10px;">&bull; <u>Motion Graphics and Social Videos</u></p></a>
 		</td>
 	</tr>
 	</table>
-</div>
+</div>	
 
     
 
