--- a/index.html
+++ b/index.html
@@ -166,10 +166,10 @@
  <!-- contact page -->
 
 <div class="container_one contactpage" style="background: red;
-  background: -webkit-linear-gradient(#131313, #33273d, #ee5d6c, #FC9C54); /* For Safari 5.1 to 6.0 */
-  background: -o-linear-gradient(#131313, #33273d, #ee5d6c, #FC9C54, #f1b351); /* For Opera 11.1 to 12.0 */
-  background: -moz-linear-gradient(#131313, #33273d, #ee5d6c, #FC9C54, #f1b351); /* For Firefox 3.6 to 15 */
-  background: linear-gradient(#131313, #33273d, #ee5d6c, #FC9C54, #f1b351); /* Standard syntax */
+  background: -webkit-linear-gradient(#131313, #003c5f, #33273d, #ee5d6c, #FC9C54); /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(#131313, #003c5f, #33273d, ivory, #FC9C54, #f1b351); /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(#131313, #003c5f, #33273d, #ee5d6c, #FC9C54, #f1b351); /* For Firefox 3.6 to 15 */
+  background: linear-gradient(#131313, #003c5f, #33273d, #ee5d6c, #FC9C54, #f1b351); /* Standard syntax */
   " >
   <img src="images/city_contact.png" class="img_contact" id="contactme" alt="city">
   <!-- <body background="images/marbleBlack.jpg" class="img_img"> -->
