--- a/portfolio.html
+++ b/portfolio.html
@@ -98,10 +98,10 @@
 				  <img alt="Carousel Bootstrap Third" src="images/mred.jpg" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto;">
 				</div> 
 
-				<div class="item">
+			<!--<div class="item">
 					<p style="font-size:16px; font-weight: bold; text-align: right; font-family: 'Lato', sans-serif; padding: 40px 170px 30px;">My cover letter, where it begins.</p>
 					<img alt="Carousel Bootstrap First" src="images/cover.jpg" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto;" >
-				</div> 
+				</div> -->
 				
 
 				<div> 
@@ -204,10 +204,10 @@
               <img alt="Carousel Bootstrap Third" src="images/mred-mobile.jpg" class="portfolio_images-mobile">
             </div> 
 			  
-			<div class="item">
+			<!--<div class="item">
 				<p style="font-size:11px; font-weight: bold; text-align: right; font-family: 'Lato', sans-serif; padding: 20px 30px 10px;">My cover letter.</p>
 				<img alt="Carousel Bootstrap First" src="images/cover-mobile.jpg" class="portfolio_images-mobile">
-            </div> 
+            </div> -->
 </div>
 </div>
 </div>
