--- a/portfolio-coding3.html
+++ b/portfolio-coding3.html
@@ -31,19 +31,18 @@
 			<tr>
 				<td>
 					<img alt="Carousel Bootstrap Second" src="images/2022-Address-Header-White.jpg" class="headermred" style="display: block; margin-left: auto; margin-right: auto; width: 100%;">
-			<p style="font-size:16px; font-weight: bold; text-align: right; font-family: 'Lato', sans-serif; padding: 40px 10px 25px; background-color: #fff;"><span style="color:dodgerblue;">BLG M&amp;A Google ads</span> in various sizes for Desktop and Mobile</p>
+			<p style="font-size:16px; font-weight: bold; text-align: right; font-family: 'Lato', sans-serif; padding: 40px 10px 25px; background-color: #fff;">BLG Helping you Navigate Ad | 2020</p>
 			</td>
 		</tr>
 	</table> 
 	<center>
 	<div class="container-fluid ninetywidth ipad displaynone">
-		<div class="col-md-12 nopadding">  
-			<iframe src="images/21-BD10503-MA-HTML-Ads-Design-A/Desktop-MandA-Design-A-336_x_280/21-BD10503-BLG-MandA-A-336_x_280.html" width="336" height="280" frameborder="0"></iframe>
-			<iframe src="images/21-BD10503-MA-HTML-Ads-Design-A/Desktop-MandA-Design-A-728_x_90/21-BD10503-BLG-MandA-A-728_x_90.html" width="728" height="90" frameborder="0"></iframe>
-			<iframe src="images/21-BD10503-MA-HTML-Ads-Design-A/Desktop-MandA-Design-A-930_x_180/21-BD10503-BLG-MandA-A-930_x_180.html" width="930" height="180" frameborder="0"></iframe>
-			<iframe src="images/21-BD10503-MA-HTML-Ads-Design-A/Mobile-MandA-Design-A-320_x_100/21-BD10503-BLG-MandA-A-320_x_100.html" width="320" height="100" frameborder="0"></iframe>
-		  	</div>
+		<div class="col-md-12 nopadding">  <br>
+			 
+			<iframe src="images/ALM-Ad/20-BD9864-ALM-Sep-1400x320_v4.html" width="1400" height="320" frameborder="1" padding="100px" class="alm"></iframe>
+			
 	</div>
+		</div>
 	</center>
 	<div class="container-fluid ninetywidth imac displaynone">
 		<div class="col-md-12 nopadding">  
@@ -72,8 +71,16 @@
 		
 		<tr align="center" padding-bottom="50px" margin-top="20px">
 		
-		<td style="text-align: left; width: 350px; "><a href="https://edwinau.github.io/edwin-landing/portfolio-coding.html" ><p style="color:green; font-size: 14px; font-family: 'Lato', sans-serif; index:1000; padding-top: 10px;">&#62; <u>Coding &#40;Html &amp; CSS&#41;</u></p></a>
-		</td></tr>
+		<td style="text-align: left; width: 350px; ">
+			<p style="color:blue; font-size: 14px; font-family: 'Lato', sans-serif; index:1000; padding-top: 10px;">&#709; <u>Coding &mdash; Html, CSS &amp; JS</u></p>
+			
+			<a href="https://edwinau.github.io/edwin-landing/portfolio-coding-1.html" >
+				<p style="color:blue; font-size: 14px; font-family: 'Lato', sans-serif; index:1000; padding-top: 10px; padding-left:15px;">&bull; <u>BLG M&amp;A Goodgle Ads (2022)</u></p></a>
+			<a href="https://edwinau.github.io/edwin-landing/portfolio-coding-2.html" >
+				<p style="color:blue; font-size: 14px; font-family: 'Lato', sans-serif; index:1000; padding-top: 10px; padding-left:15px;">&bull; <u>BLG Beyond Google Ads (2021)</u></p></a>
+			<a href="https://edwinau.github.io/edwin-landing/portfolio-coding-3.html" >
+				<p style="color:green; font-size: 14px; font-family: 'Lato', sans-serif; index:1000; padding-top: 10px; padding-left:15px;">&#62; <u>Helping you Navigate Ad (2020)</u></p></a>
+			</td></tr>
 		
 		<tr><td style="text-align: left; width: 350px;"><a href="https://edwinau.github.io/edwin-landing/portfolio-motion-social.html" ><p style="color:blue; font-size: 14px; font-family: 'Lato', sans-serif; padding-top: 10px;">&bull; <u>Motion Graphics and Social Videos</u></p></a>
 		</td>
