--- a/portfolio.html
+++ b/portfolio.html
@@ -215,7 +215,7 @@
 </div>
 	
 <div>
-	<table align="left" style="margin:auto;" height="50px" index="1000" class="portfolio-nav">
+	<table align="left" height="50px" index="1000" class="portfolio-nav">
 	
 	<tr align="left" padding-bottom="50px" margin-top="20px">
 		<td style="text-align: left; width: 350px;" ><p style="color:black; font-weight: bold; font-size: 22px; font-family: 'Lato', sans-serif; padding-top: 10px; text-decoration: none">Portfolios:</p>
