--- a/portfolio-coding2.html
+++ b/portfolio-coding2.html
@@ -46,8 +46,8 @@
 	</center>
 	<div class="container-fluid ninetywidth imac displaynone">
 		<div class="col-md-12 nopadding">  
-			<iframe src="images/Edwin_Au_Motion-Portfolio-2023-motion.pdf#toolbar=0" width="120%" height="942px" wmode="transparent" marginwidth="0" marginheight="0" hspace="0" vspace="0" frameborder="0" scrolling="no" style="border:0;">
-			</iframe>
+		<br><br><br>
+			<iframe src="images/20-BD10049 VAN-FIRM-BCBusiness_Magazine-March2021-HTML_300x250/20-BD10049 VAN-FIRM-BCBusiness_Magazine-March2021-HTML_300x250.html" width="300" height="250" frameborder="1"></iframe>
 	  	</div>
 	</div>
 </div>
