--- a/portfolio-coding3.html
+++ b/portfolio-coding3.html
@@ -46,8 +46,7 @@
 	</center>
 	<div class="container-fluid ninetywidth imac displaynone">
 		<div class="col-md-12 nopadding">  
-			<iframe src="images/Edwin_Au_Motion-Portfolio-2023-motion.pdf#toolbar=0" width="120%" height="942px" wmode="transparent" marginwidth="0" marginheight="0" hspace="0" vspace="0" frameborder="0" scrolling="no" style="border:0;">
-			</iframe>
+			<iframe src="images/ALM-Ad/20-BD9864-ALM-Sep-1400x320_v4.html" width="500" height="320" frameborder="1" padding="100px" class="alm"></iframe>
 	  	</div>
 	</div>
 </div>
