--- a/portfolio-coding1.html
+++ b/portfolio-coding1.html
@@ -36,22 +36,23 @@
 		</tr>
 	</table> 
 	<center>
-	<div class="container-fluid ninetywidth ipad displaynone">
-		<div class="col-md-12 nopadding">  
-			<iframe src="images/21-BD10503-MA-HTML-Ads-Design-A/Desktop-MandA-Design-A-336_x_280/21-BD10503-BLG-MandA-A-336_x_280.html" width="336" height="280" frameborder="0"></iframe>
-			
-			<iframe src="images/21-BD10503-MA-HTML-Ads-Design-A/Desktop-MandA-Design-A-930_x_180/21-BD10503-BLG-MandA-A-930_x_180.html" width="930" height="180" frameborder="0"></iframe>
-			<iframe src="images/21-BD10503-MA-HTML-Ads-Design-A/Desktop-MandA-Design-A-728_x_90/21-BD10503-BLG-MandA-A-728_x_90.html" width="728" height="90" frameborder="0"></iframe>
-			<iframe src="images/21-BD10503-MA-HTML-Ads-Design-A/Mobile-MandA-Design-A-320_x_100/21-BD10503-BLG-MandA-A-320_x_100.html" width="320" height="100" frameborder="0"></iframe>
-		  	</div>
-	</div>
+		<div class="container-fluid ninetywidth ipad displaynone">
+			<div class="col-md-12 nopadding">  
+				<iframe src="images/21-BD10503-MA-HTML-Ads-Design-A/Desktop-MandA-Design-A-336_x_280/21-BD10503-BLG-MandA-A-336_x_280.html" width="336" height="280" frameborder="0"></iframe>
+
+				<iframe src="images/21-BD10503-MA-HTML-Ads-Design-A/Desktop-MandA-Design-A-930_x_180/21-BD10503-BLG-MandA-A-930_x_180.html" width="930" height="180" frameborder="0"></iframe>
+				<iframe src="images/21-BD10503-MA-HTML-Ads-Design-A/Desktop-MandA-Design-A-728_x_90/21-BD10503-BLG-MandA-A-728_x_90.html" width="728" height="90" frameborder="0"></iframe>
+				<iframe src="images/21-BD10503-MA-HTML-Ads-Design-A/Mobile-MandA-Design-A-320_x_100/21-BD10503-BLG-MandA-A-320_x_100.html" width="320" height="100" frameborder="0"></iframe>
+				</div>
+		</div>
+		<div class="container-fluid ninetywidth imac displaynone">
+			<div class="col-md-12 nopadding">  
+				<iframe src="images/21-BD10503-MA-HTML-Ads-Design-A/Desktop-MandA-Design-A-336_x_280/21-BD10503-BLG-MandA-A-336_x_280.html" width="336" height="280" frameborder="0"></iframe>
+				<iframe src="images/21-BD10503-MA-HTML-Ads-Design-A/Mobile-MandA-Design-A-320_x_100/21-BD10503-BLG-MandA-A-320_x_100.html" width="320" height="100" frameborder="0"></iframe>
+			</div>
+		</div>
 	</center>
-	<div class="container-fluid ninetywidth imac displaynone">
-		<div class="col-md-12 nopadding">  
-			<iframe src="images/21-BD10503-MA-HTML-Ads-Design-A/Desktop-MandA-Design-A-336_x_280/21-BD10503-BLG-MandA-A-336_x_280.html" width="336" height="280" frameborder="0"></iframe>
-			<iframe src="images/21-BD10503-MA-HTML-Ads-Design-A/Mobile-MandA-Design-A-320_x_100/21-BD10503-BLG-MandA-A-320_x_100.html" width="320" height="100" frameborder="0"></iframe>
-	  	</div>
-	</div>
+
 </div>
 	
 	
@@ -80,7 +81,7 @@
 			<a href="https://edwinau.github.io/edwin-landing/portfolio-coding2.html" >
 				<p style="color:blue; font-size: 14px; font-family: 'Lato', sans-serif; index:1000; padding-top: 10px; padding-left:15px;">&bull; <u>BLG Beyond Google Ads (2021)</u></p></a>
 			<a href="https://edwinau.github.io/edwin-landing/portfolio-coding3.html" >
-				<p style="color:blue; font-size: 14px; font-family: 'Lato', sans-serif; index:1000; padding-top: 10px; padding-left:15px;">&bull; <u>Helping you Navigate Ad (2020)</u></p></a>
+				<p style="color:blue; font-size: 14px; font-family: 'Lato', sans-serif; index:1000; padding-top: 10px; padding-left:15px;" class="ipad displaynone">&bull; <u>Helping you Navigate Ad (2020)</u></p></a>
 			
 		</td></tr>
 		
