--- a/portfolio-coding2.html
+++ b/portfolio-coding2.html
@@ -35,7 +35,7 @@
 			</td>
 		</tr>
 	</table> 
-	<center>
+<center>
 	<div class="container-fluid ninetywidth ipad displaynone">
 		<div class="col-md-12 nopadding">  <br><br><br>
 			 
@@ -43,13 +43,14 @@
 			<iframe src="images/20-BD10049 VAN-FIRM-BCBusiness_Magazine-March2021-HTML_300x250/20-BD10049 VAN-FIRM-BCBusiness_Magazine-March2021-HTML_300x250.html" width="300" height="250" frameborder="1"></iframe>
 		  	</div>
 	</div>
-	</center>
 	<div class="container-fluid ninetywidth imac displaynone">
 		<div class="col-md-12 nopadding">  
 		<br><br><br>
 			<iframe src="images/20-BD10049 VAN-FIRM-BCBusiness_Magazine-March2021-HTML_300x250/20-BD10049 VAN-FIRM-BCBusiness_Magazine-March2021-HTML_300x250.html" width="300" height="250" frameborder="1"></iframe>
 	  	</div>
 	</div>
+</center>
+
 </div>
 	
 	
@@ -79,7 +80,7 @@
 			<a href="https://edwinau.github.io/edwin-landing/portfolio-coding2.html" >
 				<p style="color:green; font-size: 14px; font-family: 'Lato', sans-serif; index:1000; padding-top: 10px; padding-left:15px;">&#62; <u>BLG Beyond Google Ads (2021)</u></p></a>
 			<a href="https://edwinau.github.io/edwin-landing/portfolio-coding3.html" >
-				<p style="color:blue; font-size: 14px; font-family: 'Lato', sans-serif; index:1000; padding-top: 10px; padding-left:15px;">&bull; <u>Helping you Navigate Ad (2020)</u></p></a>
+				<p style="color:blue; font-size: 14px; font-family: 'Lato', sans-serif; index:1000; padding-top: 10px; padding-left:15px;" class="ipad displaynone">&bull; <u>Helping you Navigate Ad (2020)</u></p></a>
 			</td></tr>
 		
 		<tr><td style="text-align: left; width: 350px;"><a href="https://edwinau.github.io/edwin-landing/portfolio-motion-social.html" ><p style="color:blue; font-size: 14px; font-family: 'Lato', sans-serif; padding-top: 10px;">&bull; <u>Motion Graphics and Social Videos</u></p></a>
