--- a/portfolio-coding3.html
+++ b/portfolio-coding3.html
@@ -78,7 +78,7 @@
 			<a href="https://edwinau.github.io/edwin-landing/portfolio-coding2.html" >
 				<p style="color:blue; font-size: 14px; font-family: 'Lato', sans-serif; index:1000; padding-top: 10px; padding-left:15px;">&bull; <u>BLG Beyond Google Ads (2021)</u></p></a>
 			<a href="https://edwinau.github.io/edwin-landing/portfolio-coding3.html" >
-				<p style="color:green; font-size: 14px; font-family: 'Lato', sans-serif; index:1000; padding-top: 10px; padding-left:15px;">&#62; <u>Helping you Navigate Ad (2020)</u></p></a>
+				<p style="color:green; font-size: 14px; font-family: 'Lato', sans-serif; index:1000; padding-top: 10px; padding-left:15px;" class="ipad displaynone">&#62; <u>Helping you Navigate Ad (2020)</u></p></a>
 			</td></tr>
 		
 		<tr><td style="text-align: left; width: 350px;"><a href="https://edwinau.github.io/edwin-landing/portfolio-motion-social.html" ><p style="color:blue; font-size: 14px; font-family: 'Lato', sans-serif; padding-top: 10px;">&bull; <u>Motion Graphics and Social Videos</u></p></a>
