revamp after toothcomb 6

--- a/images/ALM-Ad/20-BD9864-ALM-Sep-1400x320_v4.html
+++ b/images/ALM-Ad/20-BD9864-ALM-Sep-1400x320_v4.html
@@ -4,10 +4,8 @@
 <meta http-equiv="Content-Type; X-UA-Compatible" 
 	  content="width=1400,height=330"
 	  name="ad.size" />
-<script type="text/javascript">
-  var clickTag = "https://www.blg.com/about-us/Prepare-for-whats-next?utm_medium=display&utm_source=ALM&utm_campaign=awareness%20-%201&utm_content=navigating%20uncertainty";
-</script>
-<title>ALM Ad</title>
+
+<title>BLG - ALM Ad</title>
 
 <style>
 	
@@ -352,7 +350,7 @@ top:-3%;
 		<div class="container_1400x320"  width="1400px" height="320px" style="border:1px solid #cfcfcf;" scale=".7">
 
 
-			<a href="javascript:window.open(window.clickTag)">
+		
 									<img src="images/ALM_1_Low.jpg" alt="Image" class="alm_1" />
 									<img src="images/car.png" alt="Image" class="car" />
 
@@ -374,7 +372,6 @@ top:-3%;
 
 				<p class="lm"><span  style="color:#ffffff; border-radius: 5px; padding: 3px 10px 3px 10px; background: #009cc0; text-align: center; font-size: 18pt; font-weight: 100" > Learn More &gt; </span></p>
 
-			</a>
 
 		</div>
 	</body>
