--- a/portfolio-motion-social.html
+++ b/portfolio-motion-social.html
@@ -72,7 +72,7 @@
 		
 		<tr align="center" padding-bottom="50px" margin-top="20px">
 		
-		<td style="text-align: left; width: 350px; "><a href="https://edwinau.github.io/edwin-landing/portfolio-coding1.html" ><p style="color:blue; font-size: 14px; font-family: 'Lato', sans-serif; index:1000; padding-top: 10px;">&bull; <u>Coding &mdash; Html, CSS &amp; JS</u></p></a>
+		<td style="text-align: left; width: 350px; "><a href="https://edwinau.github.io/edwin-landing/portfolio-coding1.html" ><p style="color:blue; font-size: 14px; font-family: 'Lato', sans-serif; index:1000; padding-top: 10px;">&bull; <u>Html, CSS &amp; JS</u></p></a>
 		</td></tr>
 		
 		<tr><td style="text-align: left; width: 350px;"><a href="https://edwinau.github.io/edwin-landing/portfolio-motion-social.html" ><p style="color:green; font-size: 14px; font-family: 'Lato', sans-serif; padding-top: 10px;">&#62; <u>Motion Graphics and Social Videos</u></p></a>
@@ -99,7 +99,7 @@
 		  <br class="imac displaynone"><br class="imac displaynone">
         <h4 class="linkedin" title="Click to view LinkedIn"><a href="http://www.linkedin.com/in/eaudesign" target="_blank"><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a></h4>
 		  <br class="imac displaynone"><br class="imac displaynone">
-        <h4 class="facebook" title="Click to view facebook (Currently Inactive)"><a href="http://www.facebook.com/eauwind" target="_blank"><i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i></a></h4>
+        <!-- <h4 class="facebook" title="Click to view facebook (Currently Inactive)"><a href="http://www.facebook.com/eauwind" target="_blank"><i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i></a></h4> -->
 		  <br class="imac displaynone"><br class="imac displaynone">
         <h4 class="instagram" title="+14168803791"><a href="tel:+14168803791" title="+14168803791"><i class="fa fa-whatsapp fa-2x" aria-hidden="true"></i></a></h4>
 		  <br class="imac displaynone"><br class="imac displaynone">
