--- a/portfolio-coding1.html
+++ b/portfolio-coding1.html
@@ -68,7 +68,7 @@
 		
 	<tr align="left" padding-bottom="50px" margin-top="20px">
 
-		<td style="text-align: left; width: 350px;" ><a href="https://edwinau.github.io/edwin-landing/portfolio.html" ><p style="color:blue; font-size: 14px; font-family: 'Lato', sans-serif; padding-top: 10px;">&bull; <u>UX UI and Product Design</u></p></a>
+		<td style="text-align: left; width: 350px;" ><a href="https://edwinau.github.io/edwin-landing/portfolio.html" ><p style="color:blue; font-size: 14px; font-family: 'Lato', sans-serif; padding-top: 10px;">&bull; <u>Product and Product Experience Design</u></p></a>
 		</td>
 	</tr>
 		
