--- a/index.html
+++ b/index.html
@@ -62,22 +62,21 @@
 
 	  
     <div class="img_relative labtop" id="resume_pdf" style="background: linear-gradient(27deg, #151515 5px, transparent 5px) 0 5px; linear-gradient(207deg, #151515 5px, transparent 5px) 10px 0px; linear-gradient(27deg, #222 5px, transparent 5px) 0px 10px; linear-gradient(207deg, #222 5px, transparent 5px) 10px 5px; linear-gradient(90deg, #1b1b1b 10px, transparent 10px); linear-gradient(#1d1d1d 25%, #1a1a1a 25%, #1a1a1a 50%, transparent 50%, transparent 75%, #242424 75%, #242424); background-color: #131313; background-size: 20px 20px; width: 100vw;">
-      <img src="images/plant.png" class="img_absolute img_plant" alt="plant">
+      <img src="images/plant-2.png" class="img_absolute img_plant" alt="plant">
       <img src="images/labtop.png" class="img_absolute img_labtop" alt="laptop">
     
 	<div class="container_nut">
 		<div class="container-fluid nut">
           <div class="imac displaynone">
-            <p class="hello" id="hello">Who I am<br class="imac displaynone">&amp; what I do...</p><br>
-            <!-- <hr class="white_break"> -->
-            <p class="i_believe">"I believe digital products should inspire and enhance people's lives."<br class="imac displaynone"> <span class="italic">Are we on the same page?</span></p>
+            <p class="hello" id="hello">Who I am<br>&amp; what I do...</p><hr style="width: 70%;">
+            <p class="i_believe">I believe digital products should inspire and enhance people's lives.<br><span class="italic">Are we on the same page?</span><br><br>On a lighter note, whether at work or not, I take my pour over coffee pretty seriously.<br><br>When not at work, I enjoy spending time with my partner, going to the gym and collecting crystals &amp; gems.</p>
+			  
 
           </div>
           <div class="row nut">
             <div class="col-md-10 ipad displaynone">
-              <p class="hello"><br><br>Who I am &amp;<br>what I do...</p><br>
-              <!-- <hr class="white_break"> -->
-              <p class="i_believe">"I believe digital products should inspire and enhance people's lives."<br class="medialabtopnone">  <span class="italic">Are we on the same page?</span></p>
+              <p class="hello">Who I am <br> &amp;what I do...</p><hr style="width: 70%;">
+             <p class="i_believe">I believe digital products should inspire and enhance people's lives.<br> <span class="italic">Are we on the same page?</span><br><br>On a lighter note, whether at work or not, I take my pour over coffee pretty seriously.<br><br>When not at work, I enjoy spending time with my partner, going to the gym and collecting crystals &amp; gems.</p>
 
             </div>
 
